k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: containerized_microservice
  name: containerized_microservice
  namespace: containerized_microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: containerized_microservice
  template:
    metadata:
      labels:
        app: containerized_microservice
    spec:
      containers:
      - image: gcr.io/@PROJECT_NAME@/github.com/mozilla-it/@REPO_NAME@:@SHORT_SHA@
        imagePullPolicy: Always
        name: containerized_microservice
        ports:
        - containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 10
