k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: containerized-microservice-template
  namespace: containerized-microservice-template
spec:
  type: NodePort
  selector:
    app: containerized-microservice-template
  ports:
  - name: http
    port: 80
    targetPort: 80
